--- a/source/webapp/templates/products_view.html
+++ b/source/webapp/templates/products_view.html
@@ -11,7 +11,8 @@
             <div class="class=col-12 col-md-6 col-lg-3">
                 <div class="card mt-3" style="width: 18rem;">
                     <div class="card-body">
-                    <h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>
+                    <img style="width: 200px;" src="{{ product.image }}">
+                    <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>    
                     <p class="card-text"><strong>{{ product.category }}</strong><br></p>
                     <p class="card-text"><strong>{{ product.price }}</strong><br></p>
                     <a href="{% url 'product_view' product.pk %}" class="card-link">see more>>></a>
