--- a/source/webapp/templates/product_view.html
+++ b/source/webapp/templates/product_view.html
@@ -2,11 +2,13 @@
 {% block content %}
     <div class="card mt-3" style="width: 18rem;">
         <div class="card-body">
-            <h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>
+            <img style="width: 250px;" src="{{ product.image }}">
+            <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>
             <p class="card-text"><strong>{{ product.category }}</strong><br></p>
-            <p class="card-text"><strong>Price:</strong><br>{{ product.price }}</p>
+            <p class="card-text"><strong>Price:</strong><br>{{ product.price }}$</p>
             <p class="card-text"><strong>{{ product.description }}</strong><br></p>
             <p class="card-text"><strong>Дата:</strong><br>{{ product.created_at }}</p>
+            <br><a href="{% url 'delete' product.pk  %}" class="card-link text-danger">Delete</a>
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
