--- a/source/webapp/templates/products_view.html
+++ b/source/webapp/templates/products_view.html
@@ -13,7 +13,7 @@
                     <div class="card-body">
                     <img style="width: 200px;" src="{{ product.image }}">
                     <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>    
-                    <p class="card-text"><strong>{{ product.category }}</strong><br></p>
+                    <p class="card-text"><strong>{{ product.category.title }}</strong><br></p>
                     <p class="card-text"><strong>Price: {{ product.price }}$</strong><br></p>
                     <a href="{% url 'product_view' product.pk %}" class="card-link">see more>>></a>
                     </div>
