--- a/source/webapp/templates/product_view.html
+++ b/source/webapp/templates/product_view.html
@@ -1,8 +1,8 @@
 {% extends "base.html" %}
 {% block content %}
-    <div class="card mt-3" style="width: 18rem;">
-        <div class="card-body">
-            <img style="width: 250px;" src="{{ product.image }}">
+    <div class="card mt-3 text-center bg-white rounded-4 h-100 d-flex flex-column align-items-center" style="width: 18rem;">
+        <div class="card-body ">
+            <img style="width: 250px; " src="{{ product.image }}">
             <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>
             <p class="card-text"><strong>{{ product.category.title }}</strong><br></p>
             <p class="card-text"><strong>Price:</strong><br>{{ product.price }}$</p>
