--- a/source/webapp/templates/products_view.html
+++ b/source/webapp/templates/products_view.html
@@ -8,14 +8,14 @@
 {% block content %}
     <div class="row">
         {% for product in products %}
-            <div class="class=col-12 col-md-6 col-lg-3">
-                <div class="card mt-3" style="width: 18rem;">
-                    <div class="card-body">
+            <div class="class=col-12 col-md-6 col-lg-3 ">
+                <div class="card mt-3 text-center bg-white rounded-4 h-100 d-flex flex-column align-items-center" style="width: 18rem;">
+                    <div class="card-body ">
                     <img style="width: 200px;" src="{{ product.image }}">
                     <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>    
                     <p class="card-text"><strong>{{ product.category.title }}</strong><br></p>
                     <p class="card-text"><strong>Price: {{ product.price }}$</strong><br></p>
-                    <a href="{% url 'product_view' product.pk %}" class="card-link">see more>>></a>
+                    <a href="{% url 'product_view' product.pk %}" class="card-link mt-auto">see more>>></a>
                     </div>
                 </div>
             </div>
