накатил json, подстроил views под формы, сделал удаление с подтверждением

--- a/source/webapp/templates/category_add_view.html
+++ b/source/webapp/templates/category_add_view.html
@@ -3,7 +3,7 @@
 {% endblock %}
 {% block content %}
 
-<h1>Add Category</h1>
+<br><h1>Создание категории</h1>
 
 
 <form action=" /categories/add" method="post">
@@ -11,6 +11,6 @@
     <br><input type="text" name="title" placeholder="Title"/><br/><br>
     <textarea class="text-content" name="description" placeholder="Description"></textarea><br/>
     <br/>
-    <input type="submit" value="Add Category"/>
+    <input type="submit" value="создать"/>
 </form>
 {% endblock %}
