--- a/source/webapp/templates/product_add_view.html
+++ b/source/webapp/templates/product_add_view.html
@@ -1,23 +1,13 @@
 {% extends "base.html" %}
+
+
 {% block links %}
 {% endblock %}
+
 {% block content %}
+<br><h1>Создание продукта</h1>
 
-<h1>Add Product</h1>
-
-
-<form action="/products/add" method="post">
-    {% csrf_token %}
-    <br><input type="text" name="title" placeholder="Title"/><br/><br>
-    <br><input type="number" name="price" placeholder="Price"/><br/>
-    <br><input type="url" name="image" placeholder="Image url"/><br/><br>
-    <select name="category_id" id="">
-        {% for category in categories %}
-            <option value="{{ category.id }}">{{ category.title }}</option>
-        {% endfor %}
-    </select><br><br>
-    <textarea class="text-content" name="description" placeholder="Description"></textarea><br/>
-    <br/>
-    <input type="submit" value="Add Product"/>
+<form action="" method="post">
+    {% include 'partial/product_form.html' with button_text='создать' %}
 </form>
 {% endblock %}
