--- a/source/webapp/templates/product_view.html
+++ b/source/webapp/templates/product_view.html
@@ -6,6 +6,7 @@
             <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>
             <p class="card-text"><strong>{{ product.category.title }}</strong><br></p>
             <p class="card-text"><strong>Price:</strong><br>{{ product.price }}$</p>
+            <p class="card-text"><strong>Remains:</strong><br>{{ product.remains }}$</p>
             <p class="card-text"><strong>{{ product.description }}</strong><br></p>
             <p class="card-text"><strong>Дата:</strong><br>{{ product.created_at }}</p>
             <br><a href="{% url 'delete' product.pk  %}" class="card-link text-danger">Delete</a><br>
