--- a/source/webapp/templates/products_view.html
+++ b/source/webapp/templates/products_view.html
@@ -8,8 +8,8 @@
 {% block content %}
     <div class="row">
         {% for product in products %}
-            <div class="class=col-12 col-md-6 col-lg-3 ">
-                <div class="card mt-3 text-center bg-white rounded-4 h-100 d-flex flex-column align-items-center" style="width: 18rem;">
+            <div class="class=col-12 col-md-6 col-lg-3 mb-3">
+                <div class="card mt-3 text-center bg-white rounded-4 h-100 d-flex flex-column align-items-center " style="width: 18rem;">
                     <div class="card-body ">
                     <img style="width: 200px;" src="{{ product.image }}">
                     <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>    
