--- a/source/webapp/templates/products_view.html
+++ b/source/webapp/templates/products_view.html
@@ -5,26 +5,30 @@
 {% endblock %}
 <br>
 <br>
+
 {% block content %}
+    <form method="GET" action="">
+        {% csrf_token %}
+        <br>{{ form.as_p }}
+        <button type="submit">Найти</button>
+    </form>
     <div class="row">
-        {% for product in products %}
+        {% for product in search %}
             <div class="class=col-12 col-md-6 col-lg-3 mb-3">
-                <div class="card mt-3 text-center bg-white rounded-4 h-100 d-flex flex-column align-items-center " style="width: 18rem;">
+                <div class="card mt-3 text-center bg-white rounded-4 h-100 d-flex flex-column align-items-center "
+                     style="width: 18rem;">
                     <div class="card-body ">
-                    <img style="width: 200px;" src="{{ product.image }}">
-                    <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong></h5>    
-                    <p class="card-text"><strong>{{ product.category.title }}</strong><br></p>
-                    <p class="card-text"><strong>Price: {{ product.price }}$</strong><br></p>
-                    <a href="{% url 'product_view' product.pk %}" class="card-link mt-auto">see more>>></a>
+                        <img style="width: 200px;" src="{{ product.image }}">
+                        <br><br><h5 class="card-subtitle mb-2 text-body-secondary"><strong>{{ product.title }}</strong>
+                    </h5>
+                        <p class="card-text"><strong>{{ product.category.title }}</strong><br></p>
+                        <p class="card-text"><strong>Price: {{ product.price }}$</strong><br></p>
+                        <a href="{% url 'product_view' product.pk %}" class="card-link mt-auto">see more>>></a>
                     </div>
                 </div>
             </div>
         {% endfor %}
     </div>
 {% endblock %}
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
 </body>
 </html>
