--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -7,6 +7,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{% static 'styles/style.css' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     {% block title %}
@@ -17,9 +18,9 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container">
-        <a class="navbar-brand" href="{% url 'products_view' %}">Главная</a>
-        <a class="navbar-brand" href="{% url 'category_add_view' %}">Создание категорий</a>
-        <a class="navbar-brand" href="{% url 'product_add_view' %}">Создание продуктов</a>
+        <a class="navbar-brand" href="{% url 'main' %}">Главная</a>
+        <a class="navbar-brand" href="{% url 'create_category' %}">Создание категорий</a>
+        <a class="navbar-brand" href="{% url 'create' %}">Создание продуктов</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -29,6 +30,10 @@
 
 <div class="container">
     {% block content %}
+    {% endblock %}
+</div>
+<div>
+    {% block paginator %}
     {% endblock %}
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
