--- a/source/webapp/templates/products/product_update.html
+++ b/source/webapp/templates/products/product_update.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
-
-
 {% block links %}
 {% endblock %}
-
 {% block content %}
-<br><h1>Создание продукта</h1>
+
+<h1>Изменение продукта</h1>
 
 <form action="" method="post">
-    {% include 'partial/product_form.html' with button_text='создать' %}
+    {% include 'partial/form.html' with button_text='Изменить' %}
 </form>
 {% endblock %}
