--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -21,6 +21,7 @@
         <a class="navbar-brand" href="{% url 'main' %}">Главная</a>
         <a class="navbar-brand" href="{% url 'create_category' %}">Создание категорий</a>
         <a class="navbar-brand" href="{% url 'create' %}">Создание продуктов</a>
+        <a class="navbar-brand" href="{% url 'basket' %}">Корзина</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
